Fought against Mixin (I won)